--- a/src/assets/sass/website/containers/work-details.scss
+++ b/src/assets/sass/website/containers/work-details.scss
@@ -45,33 +45,33 @@
       }
     }
     &__description {
-        position: absolute;
-        text-align: center;
-        margin-top: 145px;
-        font-size: 1.2rem;
-        @include is-extra-small-mobile {
-          margin-top: 90px;
-          font-size: 0.8rem;
-        }
-        @include is-mobile {
-          margin-top: 100px;
-          font-size: 0.9rem;
-        }
-        @include is-tablet {
-          margin-top: 110px;
-          font-size: 1rem;
-        }
-        @include is-desktop {
-          margin-top: 110px;
-          font-size: 1rem;
-        }
+      position: absolute;
+      text-align: center;
+      margin-top: 220px;
+      font-size: 1.2rem;
+      @include is-extra-small-mobile {
+        margin-top: 90px;
+        font-size: 0.8rem;
       }
+      @include is-mobile {
+        margin-top: 100px;
+        font-size: 0.9rem;
+      }
+      @include is-tablet {
+        margin-top: 110px;
+        font-size: 1rem;
+      }
+      @include is-desktop {
+        margin-top: 110px;
+        font-size: 1rem;
+      }
+    }
   }
-  &__cover-statistics{
+  &__cover-statistics {
     position: absolute;
     display: flex;
     bottom: 8%;
-    transition: all .5s ease-in-out;
+    transition: all 0.5s ease-in-out;
     @include is-extra-small-mobile {
       bottom: 1%;
     }
@@ -84,19 +84,19 @@
     @include is-desktop {
       bottom: 6%;
     }
-      :last-child{
-      &::after{
+    :last-child {
+      &::after {
         content: "";
         width: 0;
         height: 0;
       }
     }
-    div{
+    div {
       font-family: "Segoe UI Bold";
       position: relative;
       text-align: center;
       padding: 0 50px 0 50px;
-      &::after{
+      &::after {
         content: "";
         width: 3px;
         height: 60%;
@@ -105,7 +105,7 @@
         right: 0;
         top: 10px;
       }
-      h1{
+      h1 {
         margin: 0;
         @include is-extra-small-mobile {
           font-size: 1.1rem;
@@ -120,7 +120,7 @@
           font-size: 2.4rem;
         }
       }
-      p{
+      p {
         color: $accent;
         font-size: 1.5rem;
         text-transform: uppercase;
