--- a/src/assets/sass/website/components/about/about-clients-data.scss
+++ b/src/assets/sass/website/components/about/about-clients-data.scss
@@ -24,10 +24,12 @@
             width: 90%;
         }
         @include is-mobile {
-            width: 100%;
+            width: 90%;
+            padding: 15px;
         }
         @include is-extra-small-mobile{
-            width: 90%;
+            width: 80%;
+            padding: 10px;
         }
     }
     .bottomgrid{
