--- a/src/assets/sass/website/components/about/about-section.scss
+++ b/src/assets/sass/website/components/about/about-section.scss
@@ -1,7 +1,15 @@
 @import "../../color-palette.scss";
 @import "../../variables.scss";
 @import "../../mixins.scss";
-
+::-webkit-scrollbar {
+  width: 5px;
+}
+::-webkit-scrollbar-track {
+  background: $dark-background;
+}
+::-webkit-scrollbar-thumb {
+  background-color: $accent;
+}
 .about-section-wrapper{
   &__inside{
       
@@ -9,9 +17,16 @@
           padding: 35px;
           background-color: $form-background;
           min-height: 706px;
+          overflow: hidden;
+          overflow-y: auto;
           @include is-mobile {
              min-height: 500px;
+             max-height: 500px;
            }
+           @include is-extra-small-mobile{
+            min-height: 500px;
+            max-height: 500px;
+          }
             h1{
                 color: $header-item;
                 font-size: 2.3rem;
@@ -57,11 +72,12 @@
             height: 809px;
             @include cover-image("~/images/stadiumpic.png");
             filter: brightness(80%);
+            @include is-extra-small-mobile{
+              max-height: 500px;
+            }
+            @include is-mobile {
+              max-height: 500px;
+            }
         }
   }
 }
-
-
-
-
-
