--- a/src/assets/sass/website/components/work/work-main-page.scss
+++ b/src/assets/sass/website/components/work/work-main-page.scss
@@ -45,7 +45,8 @@
     height: 100%;
     width: 100%;
     opacity: 0;
-    transition: all 1.5s ease-in;
+    transition: all .5s ease-in;
+    transition-delay: .7s;
   }
   &__text {
     transition: all 0.5s ease-in-out;
