--- a/src/assets/sass/website/containers/services-details.scss
+++ b/src/assets/sass/website/containers/services-details.scss
@@ -27,6 +27,12 @@
       width: 100%;
       object-fit: cover;
       filter: brightness(50%);
+      @include is-extra-small-mobile {
+        min-height: 400px;
+      }
+      @include is-mobile {
+        min-height: 400px;
+      }
     }
     h1 {
       position: absolute;
