add directional motion blur to services carousel in home

--- a/src/assets/sass/website/mixins.scss
+++ b/src/assets/sass/website/mixins.scss
@@ -253,3 +253,10 @@
     );
   }
 }
+
+@mixin generateTextAnimation($time, $delay, $offset, $i, $animation) {
+  animation: $animation;
+  animation-duration: $time;
+  animation-delay: $i * $delay + $offset;
+  animation-timing-function: cubic-bezier(0.4, 0.3, 0.5, 1);
+}
