--- a/src/assets/sass/website/components/home/services-carousel.scss
+++ b/src/assets/sass/website/components/home/services-carousel.scss
@@ -48,13 +48,16 @@
       position: relative;
     }
   }
+
   &__title {
+    width: 100%;
     font-family: "Segoe UI Bold";
-    width: 80%;
+    position: absolute;
     padding-top: 80px;
     font-size: 2rem;
     text-align: left;
     color: $accent;
+    // color: rgba($color: $accent, $alpha: 0.25);
     margin-bottom: 0;
     text-transform: uppercase;
     @include is-extra-small-mobile {
@@ -71,10 +74,16 @@
     }
   }
   &__content {
+    width: 100%;
     text-align: left;
+    font-family: "Segoe UI";
     font-size: 1.2rem;
     line-height: 35px;
     margin-top: 10px;
+    position: absolute;
+    top: 170px;
+    color: white;
+    // color: rgba($color: #fff, $alpha: 0.25);
     @include is-extra-small-mobile {
       padding-top: 10px;
       font-size: 0.9rem;
@@ -100,9 +109,6 @@
     object-fit: cover;
     max-width: 680px;
     height: 100%;
-    animation: xx;
-    animation-duration: 10s;
-    animation-timing-function: cubic-bezier(0, 0.47, 0.36, 0.36);
     @include is-extra-small-mobile {
       max-width: 100vw;
       height: 100%;
@@ -244,7 +250,7 @@ div /deep/ {
   @include filled-half-clipped-shape($widths-and-heights, $form-background);
 }
 
-@keyframes xx {
+@keyframes animateImage {
   0% {
     transform: scale(0.8);
   }
