--- a/src/assets/sass/website/components/work/work-main-page.scss
+++ b/src/assets/sass/website/components/work/work-main-page.scss
@@ -20,7 +20,7 @@
       .work-page-wrapper__content {
         p {
           opacity: 1;
-          transition-delay: .5s;
+          transition-delay: 0.5s;
         }
       }
     }
@@ -46,9 +46,9 @@
     height: 100%;
     width: 100%;
     opacity: 0;
-    transition: all .5s ease-in;
+    transition: all 0.5s ease-in;
     transition-delay: 0s;
-    transition-duration: .5s;
+    transition-duration: 0.5s;
   }
   &__text {
     transition: all 0.5s ease-in-out;
