--- a/src/assets/sass/website/components/home/work-carousel.scss
+++ b/src/assets/sass/website/components/home/work-carousel.scss
@@ -29,13 +29,27 @@ $carousel-height: 1100px;
     right: 0;
     height: $carousel-height;
     background-color: $accent;
-    @include is-mobile {
-    }
-    @include is-tablet {
-    }
     @include is-large-desktop-or-less {
       width: 100%;
       height: 1210px;
+    }
+    @include is-desktop-or-less {
+      height: 1280px;
+    }
+    @include is-767px-or-less {
+      height: 650px;
+    }
+  }
+  &__big-mask {
+    position: absolute;
+    width: calc(100% - 63%);
+    cursor: pointer;
+    left: 0;
+    z-index: 1000;
+    height: $carousel-height;
+    background-color: $primary;
+    @include is-large-desktop-or-less {
+      display: none;
     }
     @include is-desktop-or-less {
       height: 1280px;
@@ -65,6 +79,7 @@ $carousel-height: 1100px;
     &__img {
       position: absolute;
       left: 8%;
+      z-index: 1001;
       @include is-extra-small-mobile {
         position: absolute;
         top: 0;
