add slider image and fix anchor in description

--- a/src/assets/sass/lbd/_typography.scss
+++ b/src/assets/sass/lbd/_typography.scss
@@ -109,7 +109,7 @@ h6,
     font-size: 1rem !important;
   }
   span > a {
-    color: #2af3f3 !important;
+    color: #598cc2 !important;
     text-decoration: underline;
   }
 }
@@ -179,7 +179,7 @@ span {
   h6 > a,
   p > a,
   span > a {
-    color: #2af3f3 !important;
+    color: #598cc2 !important;
     word-break: break-word;
     text-decoration: underline;
   }
