--- a/src/assets/sass/website/components/home/services-carousel.scss
+++ b/src/assets/sass/website/components/home/services-carousel.scss
@@ -6,6 +6,7 @@
   padding-top: 100px;
   padding-bottom: 100px;
   background-color: $primary;
+  position: relative;
   .services-header {
     text-align: center;
     padding-bottom: 100px;
@@ -58,6 +59,7 @@
     color: $accent;
     margin-bottom: 0;
     text-transform: uppercase;
+    z-index: 10;
     @include is-extra-small-mobile {
       font-size: 1.5rem;
     }
@@ -81,11 +83,11 @@
     position: absolute;
     top: 170px;
     color: white;
+    z-index: 10;
     @include is-extra-small-mobile {
       padding-top: 10px;
       font-size: 0.9rem;
       height: 35%;
-      overflow-y: auto;
     }
     @include is-mobile {
       padding-top: 10px;
@@ -104,21 +106,27 @@
   }
   &__img {
     object-fit: cover;
-    max-width: 680px;
+    width: 100%;
     height: 100%;
+    position: absolute;
+    left: 0;
+    top: -10px;
     @include is-extra-small-mobile {
-      max-width: 100vw;
-      height: 100%;
+      position: relative;
+      width: 80vw;
+      height: 80vh;
       filter: brightness(30%);
-      margin-left: -40px;
-      margin-top: -40px;
+      margin-top: 10px;
+      margin-left: -5px;
     }
     @include is-mobile {
+      position: relative;
       max-width: 100vw;
       filter: brightness(30%);
     }
     @include is-tablet {
-      max-width: 100vw;
+      position: relative;
+      width: 90vw;
       filter: brightness(30%);
     }
   }
