--- a/src/assets/sass/website/components/home/work-carousel.scss
+++ b/src/assets/sass/website/components/home/work-carousel.scss
@@ -86,8 +86,10 @@ $carousel-height: 1100px;
         left: 0;
         filter: brightness(30%);
         margin-top: 0 !important;
+        z-index: unset;
       }
       @include is-mobile {
+        z-index: unset;
       }
       @include is-tablet {
       }
@@ -115,10 +117,10 @@ $carousel-height: 1100px;
       top: 0;
       margin-top: 0;
       @include is-extra-small-mobile {
-        font-size: 1.6rem;
+        font-size: 1.2rem;
       }
       @include is-mobile {
-        font-size: 1.6rem;
+        font-size: 1.4rem;
       }
       @include is-tablet {
         font-size: 1.6rem;
@@ -147,6 +149,19 @@ $carousel-height: 1100px;
       font-size: 1.2rem;
       @include is-extra-small-mobile {
         height: 100%;
+        font-size: 1rem;
+      }
+      @include is-mobile {
+        font-size: 1.2rem;
+      }
+      @include is-tablet {
+        font-size: 1.4rem;
+      }
+      @include is-desktop {
+        font-size: 1.6rem;
+      }
+      @include is-large-desktop {
+        font-size: 1.8rem;
       }
     }
     &__text {
@@ -155,15 +170,19 @@ $carousel-height: 1100px;
       margin-left: auto;
       position: relative;
       z-index: 900;
+      overflow: hidden;
       @include is-extra-small-mobile {
+        z-index: unset;
         font-size: 1.1rem;
         position: absolute;
         top: 0;
         left: 0;
         height: 68vh;
-        overflow-y: auto;
         margin: 5%;
         padding: 10px;
+      }
+      @include is-extra-small-mobile {
+        height: 75vh;
       }
       @include is-mobile {
         font-size: 1.1rem;
@@ -230,7 +249,15 @@ $carousel-height: 1100px;
     display: flex;
     justify-content: center;
     cursor: pointer;
-    z-index: 1000;
+    z-index: 2000;
+    @include is-extra-small-mobile {
+      position: absolute;
+      bottom: 0;
+    }
+    @include is-mobile {
+      position: absolute;
+      bottom: 0;
+    }
   }
 }
 
@@ -300,7 +327,7 @@ $widths-and-heights: (
   clipped-shape-height: $height,
   clipped-length: $clipped-length,
   clipped-shape-width-xs: (
-    $width - 250px
+    $width - 390px
   ),
   clipped-shape-height-xs: (
     $height - 250px
