add about in dashboard

--- a/src/assets/sass/lbd/_typography.scss
+++ b/src/assets/sass/lbd/_typography.scss
@@ -219,6 +219,12 @@ span {
   }
 }
 
+.vp-editor.about-dashboard {
+  .pell-content {
+    height: 150px !important;
+  }
+}
+
 h1 small,
 h2 small,
 h3 small,
