--- a/src/assets/sass/website/components/about/about-section-data.scss
+++ b/src/assets/sass/website/components/about/about-section-data.scss
@@ -2,15 +2,103 @@
 @import "../../variables.scss";
 @import "../../mixins.scss";
 
-.about-section-wrapper{
+::-webkit-scrollbar {
+  width: 5px;
+}
+::-webkit-scrollbar-track {
+  background: $dark-background;
+}
+::-webkit-scrollbar-thumb {
+  background-color: $accent;
+}
+$text-maxheight-mob:500px;
+$text-minheight-mob:500px;
+$text-minheight-pc:706px;
 
+.about-section-wrapper{
     &__container{
         width: 100%;
         display: flex;
         justify-content: center;
     }
     &__inside{
-        padding: 70px 0px 70px 0px;
+        padding: 150px 0px 90px 0px;
         width: 76%;
+        margin: auto;
+        &--is-text{
+            div{
+              max-height: 520px;
+              overflow: hidden;
+              overflow-y: auto;
+              line-height: 33px;
+            }
+              padding:50px;
+              background-color: $form-background;
+              min-height: $text-minheight-pc;
+              overflow: hidden;
+              overflow-y: auto;
+              @include is-mobile {
+                 min-height: auto;
+                 max-height: none;
+                 padding:20px;
+               }
+               @include is-extra-small-mobile{
+                min-height: auto;
+                max-height: none;
+                padding:20px;
+              }
+                h1{
+                    color: $header-item;
+                    font-size: 2.3rem;
+                    font-family: "Segoe UI Bold";
+                    @include is-large-desktop {
+                      font-size: 2rem;
+                    }
+                    @include is-desktop {
+                      font-size: 2rem;
+                    }
+                    @include is-tablet {
+                      font-size: 1.7rem;
+                    }
+                    @include is-mobile {
+                        font-size: 1.5rem;
+                      }
+                    @include is-extra-small-mobile{
+                      font-size: 1.5rem;
+                    }
+                }
+                p{
+                    color: $sub-text;
+                    font-size: 1.2rem;
+                    @include is-large-desktop {
+                      font-size: 1rem;
+                    }
+                    @include is-desktop {
+                      font-size: 1rem;
+                    }
+                    @include is-tablet {
+                      font-size: .9rem;
+                    }
+                    @include is-mobile {
+                      font-size: .9rem;
+                    }
+                    @include is-extra-small-mobile{
+                      font-size: .9rem;
+                    }
+                }
+                
+            }
+            &--is-image{
+                margin-top: -50px;
+                height: 809px;
+                @include cover-image("~/images/stadiumpic.png");
+                filter: brightness(80%);
+                @include is-extra-small-mobile{
+                  max-height: 500px;
+                }
+                @include is-mobile {
+                  max-height: 500px;
+                }
+            }
     }
 }
