migrate contact us apis in website

--- a/src/assets/sass/website/shared/hero.scss
+++ b/src/assets/sass/website/shared/hero.scss
@@ -5,7 +5,7 @@
   height: 100vh;
   padding-top: $header-height;
   background-attachment: fixed;
-  @include cover-image("~/images/hero.jpg");
+  @include cover-image();
   @include is-extra-small-mobile {
     padding-top: $header-height-mobile;
   }
