--- a/src/assets/sass/website/components/about/about-section.scss
+++ b/src/assets/sass/website/components/about/about-section.scss
@@ -10,83 +10,81 @@
 ::-webkit-scrollbar-thumb {
   background-color: $accent;
 }
-$text-maxheight-mob:500px;
-$text-minheight-mob:500px;
-$text-minheight-pc:706px;
+$text-maxheight-mob: 500px;
+$text-minheight-mob: 500px;
+$text-minheight-pc: 706px;
 
-.about-section-wrapper{
-  &__inside{
-      
-      &--is-text{
-        div{
-          max-height: $text-maxheight-mob - 80;
-          overflow: hidden;
-          overflow-y: auto;
+.about-section-wrapper {
+  &__inside {
+    &--is-text {
+      div {
+        max-height: $text-maxheight-mob - 80;
+        overflow: hidden;
+        overflow-y: auto;
+      }
+      padding: 35px;
+      background-color: $form-background;
+      min-height: $text-minheight-pc;
+      overflow: hidden;
+      overflow-y: auto;
+      @include is-mobile {
+        min-height: $text-maxheight-mob;
+        max-height: $text-maxheight-mob;
+      }
+      @include is-extra-small-mobile {
+        min-height: $text-maxheight-mob;
+        max-height: $text-maxheight-mob;
+      }
+      h1 {
+        color: $header-item;
+        font-size: 2.3rem;
+        font-family: "Segoe UI Bold";
+        @include is-large-desktop {
+          font-size: 2rem;
         }
-          padding: 35px;
-          background-color: $form-background;
-          min-height: $text-minheight-pc;
-          overflow: hidden;
-          overflow-y: auto;
-          @include is-mobile {
-             min-height: $text-maxheight-mob;
-             max-height: $text-maxheight-mob;
-           }
-           @include is-extra-small-mobile{
-            min-height: $text-maxheight-mob;
-            max-height: $text-maxheight-mob;
-          }
-            h1{
-                color: $header-item;
-                font-size: 2.3rem;
-                font-family: "Segoe UI Bold";
-                @include is-large-desktop {
-                  font-size: 2rem;
-                }
-                @include is-desktop {
-                  font-size: 2rem;
-                }
-                @include is-tablet {
-                  font-size: 1.7rem;
-                }
-                @include is-mobile {
-                    font-size: 1.5rem;
-                  }
-                @include is-extra-small-mobile{
-                  font-size: 1.5rem;
-                }
-            }
-            p{
-                color: $sub-text;
-                font-size: 1.2rem;
-                @include is-large-desktop {
-                  font-size: 1rem;
-                }
-                @include is-desktop {
-                  font-size: 1rem;
-                }
-                @include is-tablet {
-                  font-size: .9rem;
-                }
-                @include is-mobile {
-                  font-size: .9rem;
-                }
-                @include is-extra-small-mobile{
-                  font-size: .9rem;
-                }
-            }
-            
+        @include is-desktop {
+          font-size: 2rem;
         }
-        &--is-image{
-            height: 809px;
-            @include cover-image("~/images/stadiumpic.png");
-            filter: brightness(80%);
-            @include is-extra-small-mobile{
-              max-height: 500px;
-            }
-            @include is-mobile {
-              max-height: 500px;
-            }
+        @include is-tablet {
+          font-size: 1.7rem;
         }
+        @include is-mobile {
+          font-size: 1.5rem;
+        }
+        @include is-extra-small-mobile {
+          font-size: 1.5rem;
+        }
+      }
+      p {
+        color: $sub-text;
+        font-size: 1.2rem;
+        @include is-large-desktop {
+          font-size: 1rem;
+        }
+        @include is-desktop {
+          font-size: 1rem;
+        }
+        @include is-tablet {
+          font-size: 0.9rem;
+        }
+        @include is-mobile {
+          font-size: 0.9rem;
+        }
+        @include is-extra-small-mobile {
+          font-size: 0.9rem;
+        }
+      }
+    }
+    &--is-image {
+      height: 809px;
+      // @include cover-image("~/images/stadiumpic.png");
+      filter: brightness(80%);
+      @include is-extra-small-mobile {
+        max-height: 500px;
+      }
+      @include is-mobile {
+        max-height: 500px;
+      }
+    }
   }
 }
