--- a/src/assets/sass/website/mixins.scss
+++ b/src/assets/sass/website/mixins.scss
@@ -78,8 +78,7 @@
   align-items: #{$align-items};
 }
 
-@mixin cover-image($url) {
-  background-image: url(#{$url});
+@mixin cover-image() {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
