--- a/src/assets/sass/website/containers/services.scss
+++ b/src/assets/sass/website/containers/services.scss
@@ -4,9 +4,9 @@
 @import "../shared/half-clipped-shape.scss";
 
 @mixin max-width-1650 {
-    @media (max-width: 1650px) {
-      @content;
-    }
+  @media (max-width: 1650px) {
+    @content;
+  }
 }
 ::-webkit-scrollbar {
   width: 5px;
@@ -19,81 +19,78 @@
 }
 
 .services-wrapper {
-    background-color: $primary;
-    height: max-content;
-    margin-top: -$header-height;
-    min-height: calc(100vh - #{$footer-height});
-    @include is-mobile {
-      margin-top: -$header-height-mobile - 45;
-      min-height: calc(100vh - #{$footer-height-mobile});
-    }
-    @include is-extra-small-mobile{
-      margin-top: -75px;
-    }
+  background-color: $primary;
+  height: max-content;
+  margin-top: -$header-height;
+  min-height: calc(100vh - #{$footer-height});
+  @include is-mobile {
+    margin-top: -$header-height-mobile - 45;
+    min-height: calc(100vh - #{$footer-height-mobile});
+  }
+  @include is-extra-small-mobile {
+    margin-top: -75px;
+  }
 
-    .services-container{
-      .half-filled-box{
-        margin: 0;
-        margin-bottom: 100px;
-        padding-top: 50px;
-        @include is-large-desktop {
-          margin-bottom: 90px;
-        }
-        @include is-desktop {
-          margin-bottom: 80px;
-        }
-        @include is-tablet {
-          margin-bottom: 70px;
+  .services-container {
+    .half-filled-box {
+      margin: 0;
+      margin-bottom: 100px;
+      padding-top: 50px;
+      @include is-large-desktop {
+        margin-bottom: 90px;
+      }
+      @include is-desktop {
+        margin-bottom: 80px;
+      }
+      @include is-tablet {
+        margin-bottom: 70px;
+      }
+      @include is-mobile {
+        margin-bottom: 50px;
+        margin-top: 100px;
+      }
+      @include is-extra-small-mobile {
+        padding-top: 20px;
+      }
+    }
+    &__heroContent {
+      width: 80%;
+      height: 100%;
+      margin: auto;
+      text-align: left;
+      overflow: hidden;
+      // overflow-y: auto;
+      h1 {
+        color: $header-item;
+        user-select: none;
+        font-size: 2.5rem;
+        font-family: "Segoe UI Bold";
+        @include max-width-1650 {
+          font-size: 2rem;
         }
         @include is-mobile {
-          margin-bottom: 50px;
-          margin-top: 100px;
+          font-size: 1.5rem;
         }
         @include is-extra-small-mobile {
-            padding-top: 20px;
+          font-size: 1.5rem;
         }
       }
-      &__heroContent{
-        width: 80%;
-        height: 100%;
-        margin: auto;
-        text-align: left;
-        overflow: hidden;
-        overflow-y: auto;
-          h1{
-            color: $header-item;
-            user-select: none;
-            font-size: 2.5rem;
-            font-family: "Segoe UI Bold";
-            @include max-width-1650{
-            font-size: 2rem;
-            }
-            @include is-mobile {
-                font-size: 1.5rem;
-            }
-            @include is-extra-small-mobile {
-                font-size: 1.5rem;
-            }
-          }
-          p{
-              color: $sub-text;
-              user-select: none;
-              font-size: 1.1rem;
-              line-height: 40px;
-              @include max-width-1650{
-                font-size: 1rem;
-                line-height: 30px;
-              }
-              @include is-mobile {
-                font-size: 1rem;
-              }
-          }
+      p {
+        color: $sub-text;
+        user-select: none;
+        font-size: 1.1rem;
+        line-height: 40px;
+        @include max-width-1650 {
+          font-size: 1rem;
+          line-height: 30px;
+        }
+        @include is-mobile {
+          font-size: 1rem;
+        }
       }
     }
   }
-
-
-
+}
 
 // All have vw as divide operation units must be the same for all
 $width: 70vw;
@@ -133,4 +130,4 @@ $widths-and-heights: (
 // use /deep/ to apply scss classes to the child components
 div /deep/ {
   @include filled-half-clipped-shape($widths-and-heights, rgba($primary, 0.7));
-}  
+}
