fix some styles and bug in create work in dashboard

--- a/src/assets/sass/website/components/home/services-carousel.scss
+++ b/src/assets/sass/website/components/home/services-carousel.scss
@@ -129,6 +129,9 @@
       width: 90vw;
       filter: brightness(30%);
     }
+    @include is-large-desktop {
+      height: 95vh;
+    }
   }
   &__btn {
     position: absolute;
